--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -573,11 +573,11 @@
                                             <h3 class="mb-30">Forgot password</h3>
                                         </div>
                                         <form method="post" onsubmit=" return validateform()" action="/forgotpassword">                                         
-                                            <p  style="color: red;">
-                                                <%if(message){%>
-                                            <%=message%>
-                                            <%}%>  
-                                            </p>
+                                            <%if(noti){%>
+                                                <p style="color: red;">
+                                                <%=noti%>
+                                                </p>
+                                                <%}%>
                                             <div class="form-group">
                                                 <input type="email" id="email" required="true" name="email"  placeholder="Your Email">
                                             </div>                                                                                      
