--- a/views/user/userProduct.ejs
+++ b/views/user/userProduct.ejs
@@ -183,10 +183,11 @@
                                     <%}%>
                                 <div class="header-action-right">
                                     <div class="header-action-2">
+                                        <%if(user){%>
                                         <div class="header-action-icon-2">
                                             <a href="/userWishlist">
                                                 <img class="svgInject" alt="Evara" src="assets/imgs/theme/icons/icon-heart.svg">
-                                                <span class="pro-count blue"><%=user.wishlist.length%></span>
+                                                <span class="pro-count blue"><%=user?.wishlist.length%></span>
                                             </a>
                                         </div>
                                         <div class="header-action-icon-2">
@@ -194,44 +195,8 @@
                                                 <img alt="Evara" src="assets/imgs/theme/icons/icon-cart.svg">
                                                 <span class="pro-count blue"><%=user.cart.length%></span>
                                             </a>
-                                            <div class="cart-dropdown-wrap cart-dropdown-hm2">
-                                                <ul>
-                                                    <li>
-                                                        <div class="shopping-cart-img">
-                                                            <a href="shop-product-right.html"><img alt="Evara" src="assets/imgs/shop/thumbnail-3.jpg"></a>
-                                                        </div>
-                                                        <div class="shopping-cart-title">
-                                                            <h4><a href="shop-product-right.html">Daisy Casual Bag</a></h4>
-                                                            <h4><span>1 × </span>$800.00</h4>
-                                                        </div>
-                                                        <div class="shopping-cart-delete">
-                                                            <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="shopping-cart-img">
-                                                            <a href="shop-product-right.html"><img alt="Evara" src="assets/imgs/shop/thumbnail-2.jpg"></a>
-                                                        </div>
-                                                        <div class="shopping-cart-title">
-                                                            <h4><a href="shop-product-right.html">Corduroy Shirts</a></h4>
-                                                            <h4><span>1 × </span>$3200.00</h4>
-                                                        </div>
-                                                        <div class="shopping-cart-delete">
-                                                            <a href="#"><i class="fi-rs-cross-small"></i></a>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                                <div class="shopping-cart-footer">
-                                                    <div class="shopping-cart-total">
-                                                        <h4>Total <span>$4000.00</span></h4>
-                                                    </div>
-                                                    <div class="shopping-cart-button">
-                                                        <a href="shop-cart.html" class="outline">View cart</a>
-                                                        <a href="shop-checkout.html">Checkout</a>
-                                                    </div>
-                                                </div>
-                                            </div>
                                         </div>
+                                        <%}%>
                                     </div>
                                 </div>
                             </ul>
